<resources>
    <string name="app_name">OunceAos</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="confirm">확인</string>
    <string name="complete">완료</string>
    <string name="continued">다음</string>
    <string name="cancel">취소</string>
    <string name="menu_home">home</string>
    <string name="menu_feed">feed</string>
    <string name="menu_make_group">group</string>
    <string name="menu_ranking">ranking</string>
    <string name="menu_profile">profile</string>
</resources>