<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:contentDescription="@string/menu_home"
        android:icon="@drawable/selector_menu_ounce"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/feed"
        android:contentDescription="@string/menu_feed"
        android:icon="@drawable/selector_menu_feed"
        android:title="@string/menu_feed" />
    <item
        android:id="@+id/make_group"
        android:contentDescription="@string/menu_make_group"
        android:icon="@drawable/selector_menu_make_group"
        android:title="@string/menu_make_group" />
    <item
        android:id="@+id/ranking"
        android:contentDescription="@string/menu_ranking"
        android:icon="@drawable/selector_menu_ranking"
        android:title="@string/menu_ranking" />
    <item
        android:id="@+id/profile"
        android:contentDescription="@string/menu_profile"
        android:icon="@drawable/selector_menu_profile"
        android:title="@string/menu_profile" />
</menu>